[gd_scene load_steps=7 format=3 uid="uid://cf2dxj7cmbhu1"]

[ext_resource type="PackedScene" uid="uid://bnvo7g5wu8i4p" path="res://scenes/InteractableItem.tscn" id="1_dxmx8"]
[ext_resource type="Script" path="res://scripts/MilkFrother.gd" id="2_15s4l"]
[ext_resource type="PackedScene" uid="uid://duacw1xbt0112" path="res://models/frother.glb" id="4_3lqgt"]
[ext_resource type="PackedScene" uid="uid://cpp32el77bcoc" path="res://scenes/MilkJug.tscn" id="4_btxsv"]
[ext_resource type="AudioStream" uid="uid://c56hrdbper83l" path="res://assets/audio/SFX/milk_frothing.wav" id="5_q4xpr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_167kf"]
size = Vector3(0.189319, 0.200091, 0.1444)

[node name="MilkFrother" instance=ExtResource("1_dxmx8")]
script = ExtResource("2_15s4l")

[node name="Collision" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00678018, 0.454691, 0)
shape = SubResource("BoxShape3D_167kf")

[node name="Model" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="MilkJugPosition" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00387824, 0)

[node name="MilkJug" parent="." index="3" instance=ExtResource("4_btxsv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0312444, 0.00516078, 0)

[node name="SoundFrothing" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("5_q4xpr")

[node name="frother" parent="." index="5" instance=ExtResource("4_3lqgt")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
